<resources>
    <string name="app_name">ProfePlus</string>
    <string name="facebook_app_id">1146926132073409</string>
    <string name="twitter_app_id">3e8ca93c58e6d2f5c652b3dd3a0963daa3f9c89e</string>
    <string name="lorem">Lorem Ipsum</string>
    <string name="ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
        tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="text_uni_code">Código Universitario</string>
    <string name="msg_type_code_teacher_shows">\nIntroduzca la clave\nindicada por el profesor.\n</string>
    <string name="btn_enter_class">ENTRAR A CLASE</string>
    <string name="btn_a_title">A</string>
    <string name="btn_b_title">B</string>
    <string name="btn_c_title">C</string>
    <string name="btn_d_title">D</string>
    <string name="btn_e_title">E</string>
    <string name="text_first_step">Primer Paso</string>
    <string name="null_value_txt">0000</string>
    <string name="text_alerta">Alerta</string>
    <string name="text_confirm">Confirmar</string>
    <string name="text_problem">Problema</string>
    <string name="msg_network_fails">\nNo se puede conectar.\n</string>
    <string name="text_notification">NOTIFICACIÓN</string>
    <string name="msg_wrong_code_session_over">\nCódigo equivocado o su lección ha finalizado.\n</string>
    <string name="text_teacher">PROFESOR</string>
    <string name="text_student">ESTUDIANTE</string>
    <string name="msg_data_are_incorrect">\nLos datos ingresados son incorrectos.\n</string>
    <string name="msg_you_didnt_write_code">\nNo has escrito el código.\n</string>
    <string name="msg_fill_all_fields">\nLlene todos los campos.\n</string>
    <string name="text_error">ERROR</string>
    <string name="msg_mail_already_used">\nCorreo ya usado.\n</string>
    <string name="text_step_one">PASO 1</string>
    <string name="text_step_two">PASO 2</string>
    <string name="text_step">Paso</string>
    <string name="text_code">Clave</string>
    <string name="msg_password_user_incorrect">\nContraseña o usuario incorrecto.\n</string>
    <string name="text_send_answer">\nSu respuesta fue enviada.\n¡Gracias!\n</string>
    <string name="text_answer_not_used">\nRespuesta no considerada.\n</string>
    <string name="simple">M</string>
    <string name="symbol_pct">(%)</string>
    <string name="msg_passwords_are_different">\nLas contraseñas no son iguales.\n</string>
    <string name="msg_email_is_invalid">\nLa cuenta de correo no es válida.\n</string>
    <string name="text_begin">INICIAR</string>
    <string name="text_terminate">TERMINAR</string>
    <string name="text_email">e-mail</string>
    <string name="msg_numbers_greater_zero">\nLos Números deben ser mayores que 0.\n</string>
    <string name="text_opinion">Opinión</string>
    <string name="text_free_exercise">Ejercicio Libre</string>
    <string name="text_yes">Sí</string>
    <string name="text_no">No</string>
    <string name="lbl_opinion_a">Estoy regularmente satisfecho con lo planteado.</string>
    <string name="lbl_opinion_b">Estoy regularmente satisfecho con lo planteado.</string>
    <string name="lbl_opinion_c">Estoy regularmente satisfecho con lo planteado.</string>
    <string name="lbl_opinion_d">Estoy regularmente satisfecho con lo planteado.</string>
    <string name="lbl_opinion_e">Estoy regularmente satisfecho con lo planteado.</string>
    <string name="msg_ask_partner_question_one_two">Pregunta a tu compañero(a):\n1.
        ¿Qué concepto de este curso fundamentó tu respuesta?\n2. Imagina otras situaciones
        preguntándole ¿y qué pasaría si…?\n\nLuego, cada uno envíe su respuesta.</string>
    <string name="msg_tap_correct_answer">Marca la alternativa correcta:</string>
    <string name="text_gender">Género</string>
    <string name="text_write_name">Escriba su nombre: (obligatorio)</string>
    <string name="text_write_lastname">Escriba sus apellidos: (obligatorio)</string>
    <string name="text_next">Siguiente</string>
    <string name="text_register_step_one">REGISTRO: PASO 1</string>
    <string name="text_register_step_two">REGISTRO: PASO 2</string>
    <string name="text_write_dni">Ingrese su DNI</string>
    <string name="text_write_password">Cree su contraseña para este App</string>
    <string name="text_write_password_again">Confirme su contraseña</string>
    <string name="text_register_step_three">REGISTRO: PASO 3</string>
    <string name="text_phone">Teléfono</string>
    <string name="text_email_address">Correo Electrónico (obligatorio)</string>
    <string name="text_nationality">Nacionalidad</string>
    <string name="text_city_residence">Ciudad de residencia</string>
    <string name="text_ask_class">Preguntar\na la clase</string>
    <string name="text_protocol">Tutorial</string>
    <string name="text_which_type_question">¿QUÉ TIPO DE PREGUNTA DESEA REALIZAR?</string>
    <string name="text_five_alternatives">De 5 alternativas</string>
    <string name="text_false_or_true">Verdadero/Falso</string>
    <string name="text_from_databank">De un banco de preguntas</string>
    <string name="text_get_opinion">Obtener opinión</string>
    <string name="text_which_opinion_want">¿QUÉ OPINIÓN DESEA RECIBIR?</string>
    <string name="text_satisfaction_level">Nivel de\nsatisfacción</string>
    <string name="text_agreement_level">Nivel de acuerdo\no desacuerdo</string>
    <string name="text_qualification">Nivel de\ncalificación</string>
    <string name="text_speaker_examination">Encuesta al\nexpositor</string>
    <string name="text_view_results">VER RESULTADOS</string>
    <string name="text_show_code_to_student_board">Indique la clave a los estudiantes\n(Recomendamos copiarlo en la pizarra)</string>
    <string name="text_can_start">YA PUEDE EMPEZAR</string>
    <string name="text_bank_allow_better_reports">El banco de preguntas permite un mejor orden en
        los reportes de los ejercicios realizados.  Para más detalle revise el tutorial.</string>
    <string name="text_code_number">CLAVE: 9999</string>
    <string name="text_topic_number">Número de tema\no tópico</string>
    <string name="text_exercise_number">Número de\nejercicio</string>
    <string name="text_write_data_for_inform">INDIQUE LOS DATOS PARA EL INFORME QUE SE ENVIARÁ
        POR EMAIL</string>
    <string name="text_level">Nivel:</string>
    <string name="text_grade">Grado:</string>
    <string name="text_classroom">Sección:</string>
    <string name="text_send_report">ENVIAR INFORME</string>
    <string name="text_finish_one">Terminar\npaso 1</string>
    <string name="text_finish_one2">Terminar paso 1</string>
    <string name="text_get_report">RECIBIR\nINFORME</string>
    <string name="text_get_report2">RECIBIR INFORME</string>
    <string name="text_start_two">INICIAR\nPASO 2</string>
    <string name="text_start_two2">INICIAR PASO 2</string>
    <string name="text_finish_two">TERMINAR\nPASO 2</string>
    <string name="text_finish_two2">TERMINAR PASO 2</string>
    <string name="symbol_v">V</string>
    <string name="symbol_f">F</string>
    <string name="text_alternative_dont_know">No sabe</string>
    <string name="text_alternative_no_answer">S.R.</string>
    <string name="text_individual_answer">RESPUESTA INDIVIDUAL</string>
    <string name="text_peer_instruction">INSTRUCCIÓN POR PARES</string>
    <string name="text_team_work">TRABAJO EN EQUIPO</string>
    <string name="msg_know_real_time_students_learning_process">¡Listo! Ahora podrás conocer en
        tiempo real el nivel de comprensión de los estudiantes, realizando una pregunta.\nMayor
        información en el TUTORIAL.</string>
    <string name="msg_will_be_sent_message">¡Listo!,\nSe le enviará, vía Email, su informe.</string>
    <string name="text_advice_start">CONSEJOS PARA LA PASO 1</string>
    <string name="text_advice_content_start">Acá los estudiantes responden de manera individual
        sobre el ejercicio planteado. El tiempo de cada paso las define el profesor, según su
        criterio. Mayor información en TUTORIAL.</string>
    <string name="text_personal_details">DATOS PERSONALES</string>
    <string name="text_update">ACTUALIZAR</string>
    <string name="text_sign_in">INGRESAR</string>
    <string name="text_uni_education">Educación Superior\n(Universidades\ne Institutos)</string>
    <string name="text_school_education">Educación Básica\n(Secundaria\no Primaria)</string>
    <string name="text_login">Iniciar Sesión</string>
    <string name="text_sign_up">Registrarse</string>
    <string name="text_recover_pass">Recuperar</string>
    <string name="text_change">Cambiar</string>
    <string name="text_change_pass">Cambiar Contraseña</string>
    <string name="text_dni">Documento de Identidad</string>
    <string name="text_birthdate">Fecha de Nacimiento (obligatorio)</string>
    <string name="text_confirm_password">Confirmar Contraseña</string>
    <string name="text_password">Contraseña</string>
    <string name="text_register_step_four">REGISTRO: PASO 4</string>
    <string name="text_where_study">¿Cuál es el nombre de la institución donde estudias? (opcional)</string>
    <string name="text_what_study">¿Qué carrera estudias? (opcional)</string>
    <string name="text_which_student_id">¿Cuál es tu código de estudiante? (opcional)</string>
    <string name="text_protocol_teach">Protocolo de\ndictado</string>
    <string name="text_use_manual">Manual\nde uso</string>
    <string name="text_ask_question_manual">Cómo crear un\nbanco de preguntas</string>
    <string name="text_evaluation">Evaluación calificada</string>
    <string name="text_user_student_manual">Manual de uso</string>
    <string name="text_accept_term_conditions"><u>Aceptar términos y condiciones.</u></string>
    <string name="msg_we_cannot_register">No podemos terminar su registro. Revise que haya completado toda la información de esta sección.</string>
    <string name="text_uni_student">ESTUDIANTE DE EDUCACIÓN SUPERIOR</string>
    <string name="text_uni_teacher">DOCENTE DE EDUCACIÓN SUPERIOR</string>
    <string name="text_school_teacher">DOCENTE DE COLEGIO</string>
    <string name="text_where_do_you_study">Nombre del instituto o universidad</string>
    <string name="text_what_do_you_study">Nombre de la carrera técnica o universitaria</string>
    <string name="text_what_student_id">Información obligatoria para estudiantes de universidades.</string>
    <string name="msg_choose_alternative_want_send_answer">ESCOGISTE LA ALTERNATIVA:\n%1$s\n¿DESEAS ENVIAR ESTA RESPUESTA?</string>
    <string name="text_wait_teacher">Espera la indicación del docente.</string>
    <string name="text_accept">Aceptar</string>
    <string name="text_evaluation_start_now">¿La evaluación se realizará en estos instantes (ahora)?</string>
    <string name="text_alert_type_question">Las preguntas serán de cinco alternativas
        (A, B, C, D y E) o también de dos (Verdadero y Falso).</string>
    <string name="text_duration_evaluation">Duración de la evaluación  (en minutos)</string>
    <string name="text_type_evaluation_date">Ingrese la fecha de la evaluación</string>
    <string name="text_start_time">Hora de inicio</string>
    <string name="text_end_time">Hora de fin</string>
    <string name="msg_results_send_via_mail">Los resultados le llegarán vía Email al final de la evaluación.</string>
    <string name="text_save">GUARDAR</string>
    <string name="text_update_answer">Actualizar Respuestas</string>
    <string name="text_competencia">Apoya a tu grupo</string>
    <string name="text_concurso_group">Escriba el código del grupo que desea apoyar (opcional)</string>
    <string name="text_concurso_institute">Nombre de la institución</string>
    <string name="text_support_team">¿Desea apoyar algún grupo con tu descarga?</string>
    <string name="text_can_start_step_one">PASO 1</string>
    <string name="text_ask_type_code_to_students">Indique a los estudiantes que ingresen el número</string>
</resources>