<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_fondo"
    tools:context="com.equipu.profeplus.fragments.user.ConcursoFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_next"
            android:layout_alignParentBottom="true"
            style="@style/lower_app_button"
            android:contentDescription="nextsignin4"
            android:text="@string/text_terminate"/>


        <ScrollView
            android:layout_above="@+id/btn_next"
            style="@style/scrollview_border">

            <LinearLayout
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/txt_run_view"
                    style="@style/style_text_x"
                    android:text="@string/text_competencia"/>

                <TextView
                    android:id="@+id/txt_where"
                    style="@style/style_text_xx"
                    android:text="@string/text_concurso_group"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/txt_concurso_group"
                        style="@style/default_app_input_x"/>

                    <EditText
                        android:id="@+id/edt_concurso_group"
                        style="@style/default_app_input_xx"
                        android:nextFocusDown="@+id/edt_concurso_institute" />

                </RelativeLayout>



                <TextView
                    android:id="@+id/txt_what"
                    style="@style/style_text_xx"
                    android:text="@string/text_concurso_institute"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/txt_concurso_institute"
                        style="@style/default_app_input_x"/>

                    <EditText
                        android:id="@+id/edt_concurso_institute"
                        style="@style/default_app_input_xx"/>

                </RelativeLayout>


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

            </LinearLayout>

        </ScrollView>


    </RelativeLayout>

</FrameLayout>
